@@ -617,6 +617,7 @@ namespace cYo.Projects.ComicRack.Engine
 			}
 			list.Add(new PendingTasksInfo<ImageKey>("ReadPagesAnimation", taskGroupLoadThumbnails, CacheManager.ImagePool.FastThumbnailQueue, (IProcessingItem<ImageKey> ik) => new TaskInfo(ik, StringUtility.Format(fastThumbanilQueueMessage, ik.Item.Index + 1, Path.GetFileName(ik.Item.Location)))));
 			list.Add(new PendingTasksInfo<ImageKey>("ReadPagesAnimation", taskGroupCreateThumbnails, CacheManager.ImagePool.SlowThumbnailQueue, (IProcessingItem<ImageKey> ik) => new TaskInfo(ik, StringUtility.Format(slowThumbnailQueueMessage, ik.Item.Index + 1, Path.GetFileName(ik.Item.Location)))));
+			list.Add(new PendingTasksInfo<ImageKey>("ReadPagesAnimation", taskGroupCreateThumbnails, CacheManager.ImagePool.SlowThumbnailQueueUnlimited, (IProcessingItem<ImageKey> ik) => new TaskInfo(ik, StringUtility.Format(slowThumbnailQueueMessage, ik.Item.Index + 1, Path.GetFileName(ik.Item.Location)))));
 			list.Add(new PendingTasksInfo<ImageKey>("ReadPagesAnimation", taskGroupCreatePages, CacheManager.ImagePool.SlowPageQueue, (IProcessingItem<ImageKey> ik) => new TaskInfo(ik, StringUtility.Format(getImageQueueMessage, ik.Item.Index + 1, Path.GetFileName(ik.Item.Location)))));
 			list.Add(new PendingTasksInfo<ImageKey>("ReadPagesAnimation", taskGroupLoadPages, CacheManager.ImagePool.FastPageQueue, (IProcessingItem<ImageKey> ik) => new TaskInfo(ik, StringUtility.Format(getImageQueueMessage, ik.Item.Index + 1, Path.GetFileName(ik.Item.Location)))));
 			list.Add(new PendingTasksInfo<ComicBook>("ReadInfoAnimation", taskGroupReadInfo, ReadComicBookInfoFileQueue, (IProcessingItem<ComicBook> cb) => new TaskInfo(cb, StringUtility.Format(refreshInfoQueueMessage, cb.Item.Caption))));
